--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "front-end-template",
+  "name": "meal-tracker-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:8080/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
